# soulchat

./: .gitignore  README.md  install.sh  pyproject.toml  server.py
.claude-plugin/: plugin.json
extractors/: chat_parser.py  converter.py  epub_parser.py  pdf_parser.py
skills/soul-toggle/: SKILL.md
skills/soulchat/: SKILL.md
templates/: soul_template.md
web/: index.html
