[project]
name = "soulchat"
version = "0.1.0"
description = "Extract AI personas from materials, chat with them."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "python-multipart>=0.0.20",
    "pdfplumber>=0.11.0",
    "ebooklib>=0.18",
    "beautifulsoup4>=4.12.0",
]

[tool.uv]
dev-dependencies = []
